[package]
name = "hooker"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.29"
windows-core = "0.62.2"
min_hook_rs = "2.2"
anyhow = "1.0.102"

[dependencies.simple_logger]
version = "5.2.0"
default-features = false
features = ["colors"]

[dependencies.windows]
version = "0.62.2"
features = ["Win32", "Win32_System", "Win32_System_Console", "Win32_UI", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Threading", "Win32_Security", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_Storage", "Win32_Storage_FileSystem", "Win32_Graphics", "Win32_Graphics_Gdi", "Win32_Graphics_OpenGL", "Win32_System_Diagnostics", "Win32_System_Diagnostics_ToolHelp", "Win32_System_SystemServices"]
